plan writer completed